# typos-gitlab-code-quality

./: .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: release.yml  tests.yml
scripts/: release-notes.py
src/typos_gitlab_code_quality/: __init__.py
tests/: test_typos_gitlab_code_quality.py
